<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_main"
    app:cardElevation="5dp"
    android:layout_margin="5dp"
    android:clickable="true"
    android:longClickable="true"
    android:theme="@style/AppTheme"
    android:foreground="?android:selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_Nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nama"/>
            <TextView
                android:id="@+id/tv_Alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Alamat"/>
            <TextView
                android:id="@+id/tv_Telepon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Telepon"/>
            <TextView
                android:id="@+id/tv_Medsos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Medsos"/>
            <TextView
                android:id="@+id/tv_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Email"/>
        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>
